--- a/backend/back-office-api/pom.xml
+++ b/backend/back-office-api/pom.xml
@@ -30,7 +30,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
-            <version>5.3.10</version>
+            <version>4.3.11.RELEASE</version>
         </dependency>
 
         <!-- Spring MVC Module -->
